@@ -1,3 +1,9 @@
+2011-03-25  Colomban Wendling  <colomban(at)geany(dot)org>
+
+ * data/filetypes.vala:
+   Update Vala keywords (based on a patch from Matthew Brush, thanks).
+
+
 2011-03-24  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
 
  * plugins/filebrowser.c:
